@@ -13,8 +13,14 @@ apport (0.35) UNRELEASED; urgency=low
   * gtk/apport-gtk: Split out crash report initialization to new function
     show_crashes() so that we can use the frontend for other purposes like bug
     reporting.
+  * problem_report.py: Add new method write_mime() to encode a problem report
+    in MIME/Multipart RFC 2822 format (i. e. an email with attachments). Short
+    values are aggregated into the first inline text/plain part, large values,
+    binary values, and file references get gzip compressed separate
+    attachments. Also add various test cases. See
+    https://wiki.ubuntu.com/BugReportingTool, 'Data submission' for details.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 24 Dec 2006 13:27:11 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 26 Dec 2006 11:38:32 +0100
 
 apport (0.34) feisty; urgency=low
 
